<resources>
    <string name="app_name">Market Place</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="azaar">azaar</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="click_here">Click here</string>
    <string name="new_to_bazaar">New to Bazaar?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="user_name">User name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone_number">Phone number</string>
    <string name="forgot_password2">Forgot password</string>
    <string name="we_will_send_you_an_email_with_instructions_on_how_to_reset_your_password">We will send you an email with instructions on how to reset your password</string>
    <string name="email_me">Email me</string>
    <string name="timeline">Timeline</string>
    <string name="my_market">My market</string>
    <string name="my_fares">My fares</string>
    <string name="latest">Latest</string>
    <string name="order_now">Order now</string>
    <string name="available_amount">Available amount: </string>
    <string name="rate_this_fare_click_on_the_stars_above">Rate this fare, click on the stars above</string>
    <string name="upload_images">Upload images</string>
    <string name="this_will_be_your_main_image">This will be your main image.</string>
    <string name="drag_and_drop_the_image_in_the_desired_order">Drag and drop the image in the desired order.</string>
    <string name="today">Today</string>
    <string name="give_us_details_about_your_fare">Give us details about your fare</string>
    <string name="title">Title</string>
    <string name="price_amount">Price/amount</string>
    <string name="short_description">Short description</string>
    <string name="contact_details">Contact details</string>
    <string name="name">Name</string>
    <string name="preview_my_fare">Preview my fare</string>
    <string name="launch_my_fare">Launch my fare</string>
    <string name="sold_items">Sold items</string>
    <string name="revenew">Revenue</string>
    <string name="price_item">Price/item</string>
    <string name="total_items">Total Items</string>
    <string name="do_you_want_to_delete_this_item">Do you want to delete this item:</string>
    <string name="you_successfully_deleted_the_product">You successfully deleted the product!</string>
    <string name="my_order">My order</string>
    <string name="comments">Comments</string>
    <string name="order_complete">Order completed</string>
    <string name="please_track_your_order_under">Please track your order under </string>
    <string name="ongoing_orders">Ongoing Orders</string>
    <string name="thank_you">Thank you!</string>
    <string name="send_my_order">Send my order</string>
    <string name="amount">Amount:</string>
    <string name="price">Price:</string>
    <string name="save">Save</string>
</resources>