<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/loginFragmentBackground"
    tools:context=".fragments.RecoverPasswordFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_password2"
        android:textColor="@color/loginTextColor2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="@string/we_will_send_you_an_email_with_instructions_on_how_to_reset_your_password"
        android:textColor="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_border"
        android:textColorHint="@color/hintColor"
        app:boxStrokeColor="@color/loginTextColor1"
        app:hintTextColor="@color/loginTextColor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:passwordToggleTint="@color/loginTextColor2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email"
            android:textColor="@color/loginTextColor2"
            android:textColorHint="@color/hintColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEmailMe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/loginTextColor1"
        android:text="@string/email_me"
        android:textAllCaps="false"
        android:textColor="@color/loginFragmentBackground"
        app:cornerRadius="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />
</androidx.constraintlayout.widget.ConstraintLayout>