<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/loginFragmentBackground"
    tools:context=".fragments.RegistrationFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:textColor="@color/loginTextColor2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_border"
        android:textColorHint="@color/hintColor"
        app:boxStrokeColor="@color/loginTextColor1"
        app:hintTextColor="@color/loginTextColor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNumberRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/phone_number"
            android:textColor="@color/loginTextColor2"
            android:textColorHint="@color/hintColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_border"
        android:textColorHint="@color/hintColor"
        app:boxStrokeColor="@color/loginTextColor1"
        app:hintTextColor="@color/loginTextColor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/user_name"
            android:textColor="@color/loginTextColor2"
            android:textColorHint="@color/hintColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_border"
        android:textColorHint="@color/hintColor"
        app:boxStrokeColor="@color/loginTextColor1"
        app:hintTextColor="@color/loginTextColor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email"
            android:textColor="@color/loginTextColor2"
            android:textColorHint="@color/hintColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_border"
        android:textColorHint="@color/hintColor"
        app:boxStrokeColor="@color/loginTextColor1"
        app:hintTextColor="@color/loginTextColor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/loginTextColor2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password"
            android:textColor="@color/loginTextColor2"
            android:textColorHint="@color/hintColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/loginTextColor1"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/loginBackground"
        app:cornerRadius="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="20dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/loginTextColor2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <TextView
        android:id="@+id/tvLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="27dp"
        android:text="@string/log_in"
        android:textColor="@color/loginTextColor1"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>